test/files/neg/t11591.check
t11591.scala:8: error: implicit error;
!I e: A
――Test.mkB invalid because
  !I i: Int
  implicitly[A]
            ^
1 error
